// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`icons/general/IconMail should correctly render default icon 1`] = `
<AccessibleSVG
  className="icon-mail "
  height={11}
  viewBox="0 0 14 11"
  width={14}
>
  <path
    className="fill-color"
    d="M13 0H1C.4 0 0 .4 0 1v9c0 .6.5 1 1 1h12c.6 0 1-.4 1-1V1c0-.6-.5-1-1-1zM7 5.5L1.8 1h10.5L7 5.5zM1 1zm12 9H1V1.7l5.7 4.8.3.3.3-.3L13 1.7V10z"
    fill="#444444"
  />
</AccessibleSVG>
`;

exports[`icons/general/IconMail should correctly render icon with additional props 1`] = `
<AccessibleSVG
  className="icon-mail class"
  height={100}
  title="title"
  viewBox="0 0 14 11"
  width={200}
>
  <path
    className="fill-color"
    d="M13 0H1C.4 0 0 .4 0 1v9c0 .6.5 1 1 1h12c.6 0 1-.4 1-1V1c0-.6-.5-1-1-1zM7 5.5L1.8 1h10.5L7 5.5zM1 1zm12 9H1V1.7l5.7 4.8.3.3.3-.3L13 1.7V10z"
    fill="#000"
  />
</AccessibleSVG>
`;
